# similart

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  algo.py  algorithm.py  requirements-dev.txt  requirements.txt  setup.cfg  similart_algo.py
.github/workflows/: check.yaml
scripts/ci/pre_commit/: pre_commit_autoflake.sh  pre_commit_flake8.sh
scripts/ci/static_checks/: autoflake.sh  flake8.sh  run_static_checks.sh
similart/: .gitignore  Procfile  README.txt  __init__.py  app.py  cli.py  config.py  quiz.py  requirements.txt
similart/data/: ingestor.py
similart/data/csv/: art-data.csv  sample_resultdata.csv
similart/data/json/: art_data.json  network.json  similart_data.json
similart/ml/: model.py  test.txt  training.py
similart/static/css/: reset.css  style.css
similart/static/js/: index.js  results.js
similart/static/js/lib/: d3-geo-projection.v2.min.js  d3-legend.min.js
similart/templates/: base.html.jinja  index.html  index.html.jinja  results.html.jinja
