[metadata]
name = Similart
author = Similart Team
url = https://github.com/samuelhallam/similart
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
install_requires =
  Flask
  sklearn
  numpy
  pandas
  psycopg2-binary
include_package_data = True

[isort]
line_length = 160
combine_as_imports = true
multi_line_output = 5
