[metadata]
name = similart
author = Similart Team
url = https://github.com/samuelhallam/similart
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: similart.__version__


[options]
packages = find:
install_requires =
  Flask
  h5py
  scikit-image
  pillow
  sklearn
  numpy
  pandas
  psycopg2-binary
  joblib
  Click

[options.package_data]
* = *.csv, *.json

[options.entry_points]
console_scripts =
 similart = similart.cli:cli

[isort]
line_length = 160
combine_as_imports = true
multi_line_output = 5
